# solver-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  diet_c++.cpp  env.sh  fly.toml  instance_selection.py  instances.py  instances_with_binary_variables.py  main.cpp  plot.py  pyproject.toml  readme.md  select_instances.py  selected_instances.py  setup_miplib.py  show_sqlite.py  solver.cpp  ui.py  vcpkg.json
data/: instance_names.txt
docs/: sqlite_orm.md
gurobi-template/: CMakeLists.txt  callback.cpp  env.sh
src/: binary_variables.h  db.cpp  db.h  diet_c++.cpp  diet_c++.h  facility.cpp  grb_env.h  load_model.h  solve_mps.cpp  solve_mps.h  utils.h
src/pysolver/: __init__.py  all_tables.py  compute_metrics.py  connection.py  instance_selection.py  make_instance_selection.py  pages.py  primal_gap_results.py  run_sql.py  set_best_obj_val.py  set_primal_gap.py  warm_start.py
